@@ -101,6 +101,7 @@ The following bugs are resolved with this release:
   [32582] Fix underallocation of abort_msg_s struct (CVE-2025-0395)
   [32810] Crash on x86-64 if XSAVEC disable via tunable
   [32987] elf: Fix subprocess status handling for tst-dlopen-sgid
+  [33185] Fix double-free after allocation failure in regcomp
 
 Version 2.39
 
